# openvr-tracker-reader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindOpenVR.cmake
csharp_client/: README.md  TrackerReader.cs
csharp_client/Examples/: FrameLoopExample.cs
src/: ipc_server.hpp  main.cpp  pipe_server.cpp  pipe_server.hpp  tracker_manager.cpp  tracker_manager.hpp  unix_socket_server.cpp  unix_socket_server.hpp  win_pipe_server.cpp  win_pipe_server.hpp
